--- a/block-BHaaak/contact.html
+++ b/block-BHaaak/contact.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title> simple blog template</title>
 </head>
 <body>
     <header id="top">
-        <h1>Can I Learn Coding?</h1>
-        <a href="about.html" >About</a>
-        <a href="services.html" >Services</a>
-        <a href="htttp://www.google.com/" target="blank">google</a>
-        <h3>Through AltCampus </h3>
-        <img src="media/download.png" alt="AltCampus pic">
-    </h>
+        <h1>Contact us </h1>
+        <a href="about.html" target="blank" >About</a>
+        <a href="services.html" target="blank" >Services</a>
+        <a href="contact.html" target="blank"> Contact</a>
+        <a href="https://www.google.com/" target="blank">google</a>
+    </header>
+    <main>
+         <h3>Through AltCampus </h3>
+         <img src="download.png" alt="AltCampus pic">
 
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste porro, ad sed repellendus tempore voluptas voluptates sit repellat maiores, assumenda culpa ut ab error corporis omnis eveniet recusandae Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt sequi facilis vel ea tempora perspiciatis culpa ipsum eveniet, dolores, ullam in nesciunt animi, libero officiis consequuntur alias laboriosam numquam temporibus?
         Earum possimus consectetur ad dicta reiciendis in quibusdam maxime ipsam sed quam similique nesciunt, eligendi laborum perspiciatis soluta omnis aut asperiores totam itaque aliquam sequi illo porro sapiente repellat! Laboriosam.
@@ -43,19 +46,21 @@
 
         <h3>let's see how to do coding</h3>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto quis atque sed ex, culpa eius rem fuga commodi error eveniet voluptates velit ab excepturi ipsum vel accusantium explicabo dolorum fugit?</p>
-        
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto quis atque sed ex, culpa eius rem fuga commodi error eveniet voluptates velit ab excepturi ipsum vel accusantium explicabo dolorum fugit?</p> 
     </main>
     <footer>
          <h3>Footer</h3>
             <a href="http://facebook.com" target="blank">Facebook</a>
             <a href="http://www.intagram.com/" target="blank">Instagram</a>
             <a href="http://twitter.com" target="blank">Twitter</a>
-            <section id="bottom">
-               <a href="mailto:xyz@example.com?subject=Nature%20out&body=How%20are%20you?">Email Me</a>
-       <a href="#top">back to top</a>
+            <section>
+                <button class="button">
+                    <a href="mailto:xyz@example.com?subject=Nature%20out&body=How%20are%20you?" >Email Me</a>
+                </button> 
+                <button class="button">
+                    <a href="#top">back to top</a>                
+                </button>     
             </section>
-           
     </footer>
 </body>
 </html>
