--- a/block-BHaaak/services.html
+++ b/block-BHaaak/services.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title> simple blog template</title>
 </head>
 <body>
     <header id="top">
-        <h1>Full Stack Web Development Course</h1>
-        <a href="about.html" target="blank">About</a>
-     <a href="learn to code.html" target="blank">Learn to do services</a>
-        <a href="www.google.com" target="blank">google</a>
-        <h3>We help you to learn coding </h3>
-        <img src="media/coding.png" alt="nature pic" >
+        <h1>List of Services</h1>
+        <a href="about.html" target="blank" >About</a>
+        <a href="services.html" target="blank" >Services</a>
+        <a href="contact.html" target="blank"> Contact</a>
+        <a href="https://www.google.com/" target="blank">google</a>
     </header>
     <main>
+        
+        <h3>We help you to learn coding </h3>
+        <img src="coding.png" alt="nature pic" >
 
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste porro, ad sed repellendus tempore voluptas voluptates sit repellat maiores, assumenda culpa ut ab error corporis omnis eveniet recusandae Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt sequi facilis vel ea tempora perspiciatis culpa ipsum eveniet, dolores, ullam in nesciunt animi, libero officiis consequuntur alias laboriosam numquam temporibus?
         Earum possimus consectetur ad dicta reiciendis in quibusdam maxime ipsam sed quam similique nesciunt, eligendi laborum perspiciatis soluta omnis aut asperiores totam itaque aliquam sequi illo porro sapiente repellat! Laboriosam.
@@ -53,10 +56,13 @@
             <a href="http://www.facebook.com">Facebook</a>
             <a href="http://www.twitter.com">Twitter</a>
             <a href="http://www.instagram.com">Instagram</a>
-          
-            <section id="bottom">
-               <a href="mailto:xyz@example.com?subject=Nature%20out&body=How%20are%20you?">Email Me</a>
-              <a href="#top">Back to top</a>
+           <section>
+               <button class="button">
+                   <a href="mailto:xyz@example.com?subject=Nature%20out&body=How%20are%20you?" >Email Me</a>
+                </button> 
+                <button class="button">
+                    <a href="#top">back to top</a>                
+                </button>
             </section>
     </footer>
 </body>
